# M5AppsMod

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  apps_nvs.csv  partitions.csv  sdkconfig  sdkconfig.old  version.txt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/apps/: apps.h
main/apps/app_fdisk/: app_fdisk.cpp  app_fdisk.h
main/apps/app_fdisk/assets/: app.h  app_sel.h  data.h  data_sel.h  fdisk_big.h  fdisk_small.h
main/apps/app_finder/: app_finder.cpp  app_finder.h
main/apps/app_finder/assets/: file.h  file_sel.h  finder_big.h  finder_small.h  folder.h  folder_sel.h
main/apps/app_flood/: app_flood.cpp  app_flood.h
main/apps/app_flood/assets/: flood_big.h  flood_channel.h  flood_channel_sel.h  flood_client.h  flood_client_sel.h  flood_repeater.h  flood_repeater_sel.h  flood_router.h  flood_router_sel.h  (+1 more)
main/apps/app_installer/: app_installer.cpp  app_installer.h
main/apps/app_ota/: app_ota.cpp  app_ota.h
main/apps/app_settings/: app_settings.cpp  app_settings.h
main/apps/launcher/: launcher.cpp  launcher.h
main/apps/utils/: common_define.h
main/hal/: board.h  hal.h  hal_cardputer.cpp  hal_cardputer.h
main/hal/bat/: adc_read.c  adc_read.h
main/hal/button/: button.cpp  button.h
main/hal/keyboard/: keyboard.cpp  keyboard.h  keyboard_reader_tca8418.cpp  keyboard_reader_tca8418.h  tca8418_driver.cpp  tca8418_driver.h
main/hal/led/: led.cpp
main/hal/sdcard/: sdcard.cpp
main/hal/speaker/: speaker.cpp  speaker.h
main/hal/usb/: usb.cpp  usb.h
main/settings/: settings.cpp  settings.h
(+36 files in other folders)
